# window-snap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  build.py  config.yaml  diagnose.py  index.html  privacy.html  requirements.txt  windowsnap.py
src/: config.rs  errors.rs  main.rs  windows.rs
tasks/: user.md
windowsnap/: __init__.py  __main__.py  app.py  config.py  hotkeys.py  tray.py  windows.py
