[package]
name = "window-snap"
version = "0.3.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
image = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
global-hotkey = "0.7"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
] }

[[bin]]
name = "window-snap"
path = "src/main.rs"
